@@ -107,6 +107,7 @@
         <msvc-headers>$(MEDIA_HDR)</msvc-headers>
         <library>coredll</library>
         <library>basedll</library>
+        <ldlibs>$(EXTRALIBS_MEDIA)</ldlibs>
     </dll>
 
     <lib id="medialib" template="wx_lib"
